--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "todo",
   "version": "1.0.0",
+  "private": true,
   "description": "Nuxt.js project",
   "author": "Gabriel Margoses <gabrielmargoses@gmail.com>",
-  "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "dev": "nuxt",
+    "generate": "nuxt generate",
+    "now-build": "nuxt generate",
     "precommit": "npm run lint",
-    "now-build": "nuxt generate"
+    "start": "nuxt start"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "nuxt": "^2.0.0",
-    "tachyons": "^4.11.1"
+    "vuetify": "^1.5.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^4.19.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.5.0",
+    "vuetify-loader": "^1.0.5"
   }
 }
