--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "nuxt": "^2.0.0",
-    "vuetify": "^1.5.5"
+    "tachyons": "^4.11.1",
+    "vuetify": "^1.5.13"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -25,8 +26,7 @@
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^4.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
-    "vuetify-loader": "^1.0.5"
+    "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-vuetify": "^0.5.0"
   }
 }
